fixed weird spacing on form

--- a/Web_code/static/css/map.css
+++ b/Web_code/static/css/map.css
@@ -21,7 +21,7 @@ body { height: 100%; margin: 0px; padding: 0px }
 }
 
 #weirdTitle{
-    margin-top: 10px;
+    padding-top: 10px;
 }
 
 #myForm{
